# FreshwaterLauncher

./: .env.example  .gitignore  .gitmodules  Cargo.toml  LICENSE  NOTICE.android  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
android-runtime/: index.json
android/amethyst-patches/: README.md  convert-app-to-library.py  fix-library-switch-rids.py  inject-version-helper.py  patch-embed-manifests.py
android/app-overlay/src/main/java/com/freshwater/fwl/: FwlGameActivity.kt  FwlNative.kt
crates/fwl-android-runtime/: Cargo.toml
crates/fwl-android-runtime/src/: lib.rs
crates/fwl-core/: Cargo.toml
crates/fwl-core/src/: accounts.rs  auth.rs  config.rs  download.rs  error.rs  instances.rs  java.rs  launch.rs  lib.rs  loaders.rs  paths.rs  store.rs  sync.rs  versions.rs
crates/fwl-sync-server/: Cargo.toml
crates/fwl-sync-server/src/: main.rs
docs/: android.md  data-layout.md  feature-parity.md  fwl-sync-protocol.md  microsoft-auth.md
scripts/: patch-android-project.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: android_bridge.rs  lib.rs  main.rs
src/lib/: api.ts
src/pages/: AccountsPage.tsx  DownloadPage.tsx  HomePage.tsx  InstancesPage.tsx  MorePage.tsx  StorePage.tsx  SyncPage.tsx
src/styles/: global.css
