[package]
name = "fwl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FreshwaterLauncher core: auth, download, launch, store, sync"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
zip = { workspace = true }
walkdir = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
open = { workspace = true }
