[package]
name = "fwl-sync-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Self-hosted FWL Sync update server for server owners"

[[bin]]
name = "fwl-sync-server"
path = "src/main.rs"

[dependencies]
fwl-core = { path = "../fwl-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
